// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List List matches snapshot 1`] = `
<div
  className="list-group"
/>
`;

exports[`ListItem ListItem matches snapshot 1`] = `
<div
  className="list-group-item"
/>
`;
